--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-draggable": "^4.4.5",
     "react-virtualized": "^9.22.3"
   },
   "devDependencies": {
